[gd_scene load_steps=8 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player1.gd" type="Script" id=3]
[ext_resource path="res://Player2.gd" type="Script" id=4]
[ext_resource path="res://Tower.tscn" type="PackedScene" id=5]
[ext_resource path="res://Res_Storage.tscn" type="PackedScene" id=6]
[ext_resource path="res://Turrets.gd" type="Script" id=7]

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Res_Storage" parent="Player1" instance=ExtResource( 6 )]

[node name="Player2" parent="." instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Res_Storage" parent="Player2" instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Turrets" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower1" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( -480, 0 )

[node name="Tower2" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( -120, 0 )

[node name="Tower3" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( -300, 360 )

[node name="Tower4" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( -300, -360 )

[node name="Tower5" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 480, 0 )

[node name="Tower6" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Tower7" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 300, 360 )

[node name="Tower8" parent="Turrets" instance=ExtResource( 5 )]
position = Vector2( 300, -360 )
[connection signal="timeout" from="SpawnTimer" to="Turrets" method="_on_SpawnTimer_timeout"]
